--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
     <div id="box">
         <div id="timer-container">
-            h212sss11112
         </div>
     </div>
+
+    <!-- <script src="./render.js"></script> -->
 </body>
 </html>
