--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>番茄时钟</title>
+    <title>Pasted</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="box">
-        <div id="timer-container">
-        </div>
+    <div id="root">
     </div>
 
-    <!-- <script src="./render.js"></script> -->
+    <script src="./render.js"></script>
 </body>
 </html>
