--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
 </head>
 <body>
     <div id="root">
+        <div class="title">剪切板</div>
+        <div class="input-wrapper">
+               <div class="pos">
+                <input type="text" value="Infomation....">
+                <div class="clear">清除</div>
+               </div>
+        </div>
+        <div class="list_wrapper"></div>
     </div>
-
     <script src="./render.js"></script>
 </body>
 </html>
