--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pasted</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <div id="root">
-        <div class="wrapper">
+        <!-- <div class="wrapper">
             <div class="title">剪切板</div>
             <div class="clear">清除</div>
-        </div>
+        </div> -->
         <div class="list_wrapper"></div>
     </div>
-    <script src="./render.js"></script>
+    <script src="./js/render.js"></script>
 </body>
 </html>
